<resources>
    <string name="app_name">My Application</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_dashboard_second">Hello DashboardSecondFragment. Arg: %1$s</string>
    <string name="hello_notifications_second">Hello NotificationsSecondFragment. Arg: %1$s</string>
    <string name="title_home">Home</string>
    <string name="title_trending">Trending</string>
    <string name="title_about">About</string>

    <string name="home_second">Home Second</string>
    <string name="movie_name">Movie name</string>
    <string name="week_trending">Week\'s trending</string>
    <string name="today_trending">Today\'s trending</string>
    <string name="movies">Movies</string>
    <string name="categories">Categories</string>
    <string name="author">Authors</string>
    <string name="series">Series</string>
    <string name="no_providers_message">Aucune plateforme de streaming n\'est disponible en france pour ce film</string>
    <string name="disponible">Disponible sur</string>
    <string name="favorites">Favorites</string>
    <string name="trailer">Trailer</string>
    <string name="no_trailers_available">Aucun trailer n\'a été trouvé pour ce film</string>
    <string name="similars_movies">Similars movies</string>
    <string name="about">About</string>
</resources>