<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.leperlier.quinquis.lentz.imdb.ui.menu.trending.TrendingFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movies"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="#303030"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        />

    <TextView
        android:id="@+id/trending_day_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/today_trending"
        android:textStyle="normal"
        android:textSize="20sp"
        android:textColor="#4B4B4B"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trending_day_movie_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trending_day_title"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/movie_horizontal_item" />

    <TextView
        android:id="@+id/trending_week_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/week_trending"
        android:textStyle="normal"
        android:textSize="20sp"
        android:textColor="#4B4B4B"
        app:layout_constraintTop_toBottomOf="@id/trending_day_movie_list"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trending_week_movie_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trending_week_title"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/movie_horizontal_item" />

    <TextView
        android:id="@+id/series_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/series"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="#303030"
        app:layout_constraintTop_toBottomOf="@+id/trending_week_movie_list"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        />


    <TextView
        android:id="@+id/trending_day_serie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/today_trending"
        android:textStyle="normal"
        android:textSize="20sp"
        android:textColor="#4B4B4B"
        app:layout_constraintTop_toBottomOf="@id/series_title"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trending_day_serie_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trending_day_serie_title"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/movie_horizontal_item" />

    <TextView
        android:id="@+id/trending_week_serie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/week_trending"
        android:textStyle="normal"
        android:textSize="20sp"
        android:textColor="#4B4B4B"
        app:layout_constraintTop_toBottomOf="@id/trending_day_serie_list"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trending_week_serie_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trending_week_serie_title"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/movie_horizontal_item" />

</androidx.constraintlayout.widget.ConstraintLayout>